Removed IslandManager.java, corrected some warnings.